--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,9 @@
   </div><!-- #nav_r -->
     <div class="clear"> </div>
   <div id="tabs">
-    <ul>
-      <li id="tab-home"></li>
-      <li id="tab-submit"></li>
-      <li id="tab-how-to"></li>
-    </ul>
+      <a id="tab-home" href="http://www.portwist.com"><img src="images/home_btn.png" alt="Home"></a>
+      <a id="tab-submit" href="/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
+      <a id="tab-how-to"><img src="images/howto_btn.png" alt="How To" href="http://www.portwist.com/howto"></li>
   </div><!-- #tabs -->
   <div class="clear"> </div>
     <div id="logo">
