--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,24 @@
 	  <a id="rss" href="http://www.twitter.com/portwist"><img src="images/RSS_button.png" alt="rss"></a> 
     <a id="twitter" href="http://www.twitter.com/portwist"><img src="images/twitter_button.png"></a>
   </div><!-- #headerbar -->
-  	<div class="clear"> </div>
-  <div id="nav_l">
+    <div id="nav_l">
       <img src="images/header_spike_left.png">
-  </div><!-- #nav_l -->
-  <div id="nav_r">
-    <img src="images/header_spike_right.png">
-  </div><!-- #nav_r -->
-    <div class="clear"> </div>
-  <div id="tabs">
-      <a id="tab-home" href="http://www.portwist.com"><img src="images/home_btn.png" alt="Home"></a>
-      <a id="tab-submit" href="/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
-      <a id="tab-how-to"><img src="images/howto_btn.png" alt="How To" href="http://www.portwist.com/howto"></li>
-  </div><!-- #tabs -->
-  <div class="clear"> </div>
+    </div><!-- #nav_l -->
+      <div id="nav_r">
+        <img src="images/header_spike_right.png">
+      </div><!-- #nav_r -->
+        <div id="tabs">
+          <a id="tab-home" href="http://www.portwist.dev"><img src="images/home_btn.png" alt="Home"></a>
+          <a id="tab-submit" href="http://www.portwist.dev/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
+          <a id="tab-how-to" href="http://www.portwist.dev/howto"><img src="images/howto_btn.png" alt="How To"></li></a>
+        </div><!-- #tabs -->
+      <div class="clear"> </div>
     <div id="logo">
-      <img src="images/logo.png">
+      <a href="http://portwist.dev"><img src="images/logo.png"></a>
+      <hr id="line">
     </div><!-- #logo -->
+
+<%= yield %>    
+
 </body>
 </html>
