add body_id for max to use css more better

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -22,3 +22,5 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #right_side ul {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7;}
 #right_side li {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7; padding: 0px 0px 20px 0px;}
 #submit_text {color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: underline;}
+
+#root-index {background:green;}
