--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 </head>
-<body>    
+<body id="<%= body_id %>">    
   <div id="headerbar">
 	  <a id="rss" href="http://www.twitter.com/portwist"><img src="images/RSS_button.png" alt="rss"></a> 
     <a id="twitter" href="http://www.twitter.com/portwist"><img src="images/twitter_button.png"></a>
