added the html and css for the how to page

--- a/app/views/root/howto.html.erb
+++ b/app/views/root/howto.html.erb
@@ -1,1 +1,34 @@
-howto
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Portwist</title>
+  <%= stylesheet_link_tag 'reset', 'application' %>
+  <%= javascript_include_tag 'application' %>
+  <%= csrf_meta_tag %>
+</head>
+    <body id="<%= body_id %>">
+      <div id="wrapper">  
+        <div id="left_side">
+          <ul>
+            <li>HOW TO PRONOUNCE IT: 
+            <li>HOW TO MAKE A PORTWIST: 
+            <br><br><br><br>
+            <li>HOW TO READ THE TERMS AND CONDITIONS:
+          </ul>
+        </div><!--#left_side -->
+      <div id="right_side">
+        <ul>
+          <li>Imagine a young Mike Tyson saying portraits.</li>  
+          <li>Get an Iphone 4.
+            <br>
+            Go somewhere cool.
+            <br>
+            Take a pic of yourself with the front facing camera. 
+            <br>
+            Flip the camera and take a pic of your surroundings.</li>
+          <li><a id="submit_text" href="/termsandconditions">Click Here</a></li>
+        </ul>
+      </div><!--#right_side -->
+    </div><!--#wrapper -->
+  </body>
+</html>
