--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -12,7 +12,7 @@
 #tabs #tab-current{}
 .clear {clear:both;}
 
-!-- headerbar
+/*This is the code for how-to*/
 p.left {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7; }
 p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #left_side {float:left; width:49%; margin: 50px 0px 0px 0px;}
@@ -22,5 +22,5 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #right_side ul {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7;}
 #right_side li {text-align:left; font:13px century gothic,sans-serif; color:#b4b5b7; padding: 0px 0px 20px 0px;}
 #submit_text {color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: underline;}
-
-#root-index {background:green;}
+#wrapper {width:700px; margin-right: auto; margin-left: auto; padding: 0px 0px 0px 30px;}
+#root-index {background:;}
