updated htmland css for howto and submit

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,1 +1,31 @@
-index
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>Portwist</title>
+  <link rel="stylesheet" type="text/css" media="all" href="public/stylesheets/reset.css" />
+<div id='content'>
+    <div id="photos">
+      <img class="user_left" src="images/public_uploads/user_left.jpg">
+      <img class="user_right" src="images/public_uploads/user_right.jpg">
+        <div id="description">
+          <ul>
+            <li id="description_l">Pitchfork</li>
+            <li id="description_r">Amanda G.</li>
+          </ul>
+        </div><!--#description -->  
+    </div><!-- #photos -->
+  <hr id="line">
+  <div id="photos">
+    <img class="user_left" src="images/public_uploads/user_left.jpg">
+    <img class="user_right" src="images/public_uploads/user_right.jpg">
+     <div id="description">
+        <ul>
+          <li id="description_l">Amanda G.</li>
+          <li id="description_r">Pitchfork</li>
+        </ul>
+      </div><!--#description -->  
+  </div><!-- #photos -->
+</div><!--#content -->
+</div><!-- #wrapper -->
+</html>
