--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -1,1 +1,46 @@
-submit
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>Submit</title>
+  <link rel="stylesheet" type="text/css" media="all" href="public/stylesheets/reset.css" />
+<head>
+  <div id="wrapper">
+	    <div id="instructions">
+	      <ul>
+	        <li>WITH YOUR IPHONE 4:</li>
+          <li>1. Take a picture of yourself.</li>
+          <li>2. Flip the camera around.</li>
+          <li>3. Take a picture of your surroundings.</li>
+          <li>4. Submit both pictures.</li>
+          <li>5. Give your Portwist a title.</li>
+          <li>6. Add your name.</li>
+          <li>7. Submit it.</li>
+        </ul>
+	    </div><!--#instructions -->
+	      <div id="frame">
+          <ul>
+  	        <li id="picture_title_l">Picture 1</li>
+  	        <li id="picture_title_r">Picture 2</li>
+  	      </ul>
+            <img id="browse_l" src="images/browse_button.png">
+            <img id="browse_r" src="images/browse_button.png">
+        </div><!-- #frame --> 
+      <div id="description">
+        <ul>
+          <li id="description_l">(YOUR TITLE)</li>
+          <li id="description_r">(YOUR NAME)</li>
+        </ul>
+      </div><!--#description --> 
+        <div id="submit">
+          <img src="images/submit_button.png">
+          <br>
+          <br>
+          <img src="images/submit_box.png">
+          &nbsp
+            <div id="submit_text">
+              I agree to the <a id="submit_text" href="/termsandconditions">terms & conditions.</a>
+            </div><!--#submit_text -->
+        </div><!--#submit -->
+	</div><!-- #wrapper -->
+</html>
