fixed images and issue with conflicting instruction css

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -26,10 +26,10 @@
             <img id="browse_l" src="images/browse_button.png">
             <img id="browse_r" src="images/browse_button.png">
         </div><!-- #frame --> 
-      <div id="description">
+      <div id="description_ht">
         <ul>
-          <li id="description_l">(YOUR TITLE)</li>
-          <li id="description_r">(YOUR NAME)</li>
+          <li id="description_ht_l">(YOUR TITLE)</li>
+          <li id="description_ht_r">(YOUR NAME)</li>
         </ul>
       </div><!--#description --> 
         <div id="submit">
