fixed the syntax for the CSS conflicts added _st to submit CSS

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -5,7 +5,7 @@
   <title>Submit</title>
   <link rel="stylesheet" type="text/css" media="all" href="public/stylesheets/reset.css" />
 <head>
-  <div id="wrapper">
+  <div id="wrapper_st">
 	    <div id="instructions">
 	      <ul>
 	        <li>WITH YOUR IPHONE 4:</li>
@@ -26,10 +26,10 @@
             <img id="browse_l" src="images/browse_button.png">
             <img id="browse_r" src="images/browse_button.png">
         </div><!-- #frame --> 
-      <div id="description_ht">
+      <div id="description_st">
         <ul>
-          <li id="description_ht_l">(YOUR TITLE)</li>
-          <li id="description_ht_r">(YOUR NAME)</li>
+          <li id="description_st_l">(YOUR TITLE)</li>
+          <li id="description_st_r">(YOUR NAME)</li>
         </ul>
       </div><!--#description --> 
         <div id="submit">
