--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -35,8 +35,8 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #wrapper {width:700px; margin-right: auto; margin-left: auto; padding: 0px 0px 0px 30px;}
 #root-index {background:;}
 
-/*This is the code for how-to*/
-#wrapper {width:700px; margin-right: auto; margin-left: auto; padding: 0px 0px 0px 30px; border-style:none; border-width:1px; border-color:red;} 
+/*This is the code for submit*/
+#wrapper_st {width:700px; height:300px; margin-right: auto; margin-left: auto; margin-top:0px; padding: 0px 50px; border-style:solid; border-width:1px; border-color:} 
 #frame {height:162px; width:366px; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; background-position:top right; float: right; margin: 38px 0px 0px 0px;}
 #browse_l {float:left; padding: 20px 20px 0px 30px;}
 #browse_r {float:right; padding: 20px 30px 0px 20px;}
@@ -44,9 +44,9 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #picture_title_r {float:right; padding: 80px 70px 0px 60px; display:inline; font:12px century gothic,sans-serif; color:#b4b5b7;}
 #instructions {float:left; margin: 60px 0px 0px 0px;}
 #instructions li {display:block; color:#b4b5b7; font:12px century gothic,sans-serif;}
-#description_ht {margin: 170px 15px 0px 350px;}
-#description_ht li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
-#description_ht_l {float:left; margin: 10px 0px 0px 0px;}
-#description_ht_r {float: right; margin: 10px 0px 0px 0px;}
+#description_st {margin: 170px 15px 0px 350px;}
+#description_st li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
+#description_st_l {float:left; margin: 10px 0px 0px 0px;}
+#description_st_r {float: right; margin: 10px 0px 0px 0px;}
 #submit {float:left; margin:55px 0px 0px 450px; padding: 0px 0px 0px 0px;}
 #submit_text {color:#b4b5b7; font:13px century gothic,sans-serif; text-decoration: underline;}
