fixed the copy on the terms and condition check box. Cleaned up the css. Fixed the odd spacing issue on the submit page. Was an over zealous margin on one of the description areas

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -18,6 +18,7 @@
           <li>7. Submit it.</li>
         </ul>
 	    </div><!--#instructions -->
+	    <div "class=clear"></div>
 	      <div id="frame">
           <ul>
   	        <li id="picture_title_l">Picture 1</li>
@@ -31,16 +32,14 @@
           <li id="description_st_l">(YOUR TITLE)</li>
           <li id="description_st_r">(YOUR NAME)</li>
         </ul>
-      </div><!--#description --> 
+      </div><!--#description_st --> 
         <div id="submit">
           <img src="images/submit_button.png">
           <br>
           <br>
           <img src="images/submit_box.png">
           &nbsp
-            <div id="submit_text">
-              I agree to the <a id="submit_text" href="/termsandconditions">terms & conditions.</a>
-            </div><!--#submit_text -->
+          I agree to the <a id="submit_text" href="/termsandconditions">terms & conditions.</a>
         </div><!--#submit -->
-	</div><!-- #wrapper -->
+	</div><!-- #wrapper-st -->
 </html>
