added all pop ups to page. they are at the bottom now but eventually will just pop up. The HTML CSS is all done. things look like they should. Need to add functionality

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Submit</title>
-  <link rel="stylesheet" type="text/css" media="all" href="public/stylesheets/reset.css" />
-<head>
-  <div id="wrapper_st">
+<div id="wrapper_st">
 	    <div id="instructions">
 	      <ul>
 	        <li>WITH YOUR IPHONE 4:</li>
@@ -42,4 +35,45 @@
           I agree to the <a id="submit_text" href="/termsandconditions">terms & conditions.</a>
         </div><!--#submit -->
 	</div><!-- #wrapper-st -->
-</html>
+	
+	
+	
+<!--#this code is for the pop up that will appear on click of submit and success -->
+ <div id='content_sc'>
+    <div id="p1_sc">
+      SUCCESS
+    </div><!-- #p1_sc -->
+    <div id="p2_sc">
+      We have to approve your Portwist before it posts to the site.</br>
+      (I mean come on, remember chat roulette?)</br>
+      It’ll be up soon. 
+      </br>
+      </br>
+      <a id='submit_text_sc' href="http://twitter.com/#!/portwist">Follow us on twitter</a> to stay up to date.
+    </div><!-- #p2_sc -->
+      <div id="tryagain">
+      <a href="http://portwist.dev"><img src="images/thanks_btn.png"></a>      </div><!--#tryagain -->
+  </div><!--#content -->
+  
+  
+  
+<!--#this code is for the pop up that will appear on click of submit and success -->
+<div id='content_f'>
+  <div id="p1_f">
+    FAILURE
+  </div><!-- #p1 -->
+  <div id="p2_f">
+    Oh boy, you goofed (or maybe we did, but that would never happen).
+    </br> 
+    Make sure you selected two images created on an iPhone 4. 
+    </br>
+    Check your internet connection and give it another shot. 
+    </br>
+    </br>
+    If you continue to have problems <a id="submit_text_sc" href="portwist.com/contactus">contact us.</a>
+  </div><!-- #p2 -->
+    <div id="tryagain">
+    <a href="http://portwist.dev/submit"><img src="images/tryagain_btn.png"></a>
+    </div><!--#tryagain -->
+</div><!--#content -->
+  
