--- a/app/views/root/howto.html.erb
+++ b/app/views/root/howto.html.erb
@@ -1,34 +1,47 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Portwist</title>
-  <%= stylesheet_link_tag 'reset', 'application' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tag %>
-</head>
-    <body id="<%= body_id %>">
-      <div id="wrapper">  
-        <div id="left_side">
-          <ul>
-            <li>HOW TO PRONOUNCE IT: 
-            <li>HOW TO MAKE A PORTWIST: 
-            <br><br><br><br>
-            <li>HOW TO READ THE TERMS AND CONDITIONS:
-          </ul>
-        </div><!--#left_side -->
-      <div id="right_side">
-        <ul>
-          <li>Imagine a young Mike Tyson saying portraits.</li>  
-          <li>Get an Iphone 4.
-            <br>
-            Go somewhere cool.
-            <br>
-            Take a pic of yourself with the front facing camera. 
-            <br>
-            Flip the camera and take a pic of your surroundings.</li>
-          <li><a id="submit_text" href="/termsandconditions">Click Here</a></li>
-        </ul>
-      </div><!--#right_side -->
-    </div><!--#wrapper -->
-  </body>
-</html>
+<body id="<%= body_id %>">
+  <div id="wrapper">  
+    <div id="left_side">
+      <ul>
+        <li>HOW TO PRONOUNCE IT: 
+        <li>HOW TO MAKE A PORTWIST: 
+        <br><br><br><br>
+        <li>HOW TO READ THE TERMS AND CONDITIONS:
+      </ul>
+    </div><!--#left_side -->
+  <div id="right_side">
+    <ul>
+      <li>Imagine a young Mike Tyson saying portraits.</li>  
+      <li>Get an Iphone 4.
+        <br>
+        Go somewhere cool.
+        <br>
+        Take a pic of yourself with the front facing camera. 
+        <br>
+        Flip the camera and take a pic of your surroundings.</li>
+      <li><a id="submit_text" <a href="popups.html">Click Here</a></li>
+    </ul>
+  </div><!--#right_side -->
+</div><!--#wrapper -->
+
+<!--#this code is for the pop up that will appear on click of terms and conditions -->
+<div id='wrapper_tandc'>
+	<div id="p1_tandc">
+	  TERMS AND CONDITIONS
+  </div><!-- #p1_tandc -->
+	  <div id="p2_tandc">
+  	  If you submit pictures I might use them for my portfolio, or a book, or on some other site.
+      </br>
+      I’m not an asshole.  I won’t do anything weird with your pictures.
+      </br>
+      But I think I’m obligated to tell you 
+      </br>
+      this stuff might show up somewhere else (but probably not).
+      </br>
+      Let’s just all be good people and move on.
+      </br>
+      If you want to yell at us about it <a id='submit_text' href="www.portwist.com/contact">click here.</a>
+    </div><!-- #p2_tandc -->
+    	<div id="tryagain">
+    	  <a href="http://portwist.dev"><img src="images/bye_btn.png"></a>
+      </div><!--#tryagain -->
+</div><!--#wrapper_tandc -->
