--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -11,7 +11,7 @@
           <li>7. Submit it.</li>
         </ul>
 	    </div><!--#instructions -->
-	    <div "class=clear"></div>
+	    <div class="clear"></div>
 	      <div id="frame">
           <ul>
   	        <li id="picture_title_l">Picture 1</li>
@@ -19,13 +19,13 @@
   	      </ul>
             <img id="browse_l" src="images/browse_button.png">
             <img id="browse_r" src="images/browse_button.png">
-        </div><!-- #frame --> 
+        </div><!-- #frame -->
       <div id="description_st">
         <ul>
           <li id="description_st_l">(YOUR TITLE)</li>
           <li id="description_st_r">(YOUR NAME)</li>
         </ul>
-      </div><!--#description_st --> 
+      </div><!--#description_st -->
         <div id="submit">
           <img src="images/submit_button.png">
           <br>
@@ -34,46 +34,32 @@
           &nbsp
           I agree to the <a id="submit_text" href="/termsandconditions">terms & conditions.</a>
         </div><!--#submit -->
+
+
+  	    <div class="clear"></div>
+        <%= form_for PhotoSet.new, :html => {:multipart => true} do |f| %>
+          <div class="field">
+            <%= f.label :photo_1 %><br />
+            <%= f.file_field :photo_1 %>
+          </div>
+          <div class="field">
+            <%= f.label :photo_2 %><br />
+            <%= f.file_field :photo_2 %>
+          </div>
+          <div class="field">
+            <%= f.label :your_name %><br />
+            <%= f.text_field :your_name %>
+          </div>
+          <div class="field">
+            <%= f.label :your_title %><br />
+            <%= f.text_field :your_title %>
+          </div>
+          <div class="field">
+            <%= f.check_box :terms %> <%= f.label :terms, 'I agree to the terms & conditions' %>
+          </div>
+          <div class="actions">
+            <%= f.submit 'Submit' %>
+          </div>
+        <% end %>
+
 	</div><!-- #wrapper-st -->
-	
-	
-	
-<!--#this code is for the pop up that will appear on click of submit and success -->
- <div id='content_sc'>
-    <div id="p1_sc">
-      SUCCESS
-    </div><!-- #p1_sc -->
-    <div id="p2_sc">
-      We have to approve your Portwist before it posts to the site.</br>
-      (I mean come on, remember chat roulette?)</br>
-      It’ll be up soon. 
-      </br>
-      </br>
-      <a id='submit_text_sc' href="http://twitter.com/#!/portwist">Follow us on twitter</a> to stay up to date.
-    </div><!-- #p2_sc -->
-      <div id="tryagain">
-      <a href="http://portwist.dev"><img src="images/thanks_btn.png"></a>      </div><!--#tryagain -->
-  </div><!--#content -->
-  
-  
-  
-<!--#this code is for the pop up that will appear on click of submit and success -->
-<div id='content_f'>
-  <div id="p1_f">
-    FAILURE
-  </div><!-- #p1 -->
-  <div id="p2_f">
-    Oh boy, you goofed (or maybe we did, but that would never happen).
-    </br> 
-    Make sure you selected two images created on an iPhone 4. 
-    </br>
-    Check your internet connection and give it another shot. 
-    </br>
-    </br>
-    If you continue to have problems <a id="submit_text_sc" href="portwist.com/contactus">contact us.</a>
-  </div><!-- #p2 -->
-    <div id="tryagain">
-    <a href="http://portwist.dev/submit"><img src="images/tryagain_btn.png"></a>
-    </div><!--#tryagain -->
-</div><!--#content -->
-  
