--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
         <img src="images/header_spike_right.png">
       </div><!-- #nav_r -->
         <div id="tabs">
-          <a id="tab-home" href="http://www.portwist.dev"><img src="images/home_btn.png" alt="Home"></a>
-          <a id="tab-submit" href="http://www.portwist.dev/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
-          <a id="tab-how-to" href="http://www.portwist.dev/howto"><img src="images/howto_btn.png" alt="How To"></li></a>
+          <a id="tab-home" href="/"><img src="images/home_btn.png" alt="Home"></a>
+          <a id="tab-submit" href="/submit"><img src="images/submit_btn.png" alt="Submit"></li></a>
+          <a id="tab-how-to" href="/howto"><img src="images/howto_btn.png" alt="How To"></li></a>
         </div><!-- #tabs -->
       <div class="clear"> </div>
     <div id="logo">
-      <a href="http://portwist.dev"><img src="images/logo.png"></a>
+      <a href="/"><img src="images/logo.png"></a>
       <hr id="line">
     </div><!-- #logo -->
 
