--- a/app/views/photo_sets/failure.html.erb
+++ b/app/views/photo_sets/failure.html.erb
@@ -14,6 +14,6 @@
     If you continue to have problems <a id="submit_text_sc" href="portwist.com/contactus">contact us.</a>
   </div><!-- #p2 -->
     <div id="tryagain">
-    <a href="http://portwist.dev/submit"><img src="images/tryagain_btn.png"></a>
+    <a href="/submit"><img src="images/tryagain_btn.png"></a>
     </div><!--#tryagain -->
 </div><!--#content -->
