--- a/app/views/photo_sets/success.html.erb
+++ b/app/views/photo_sets/success.html.erb
@@ -12,5 +12,5 @@
       <a id='submit_text_sc' href="http://twitter.com/#!/portwist">Follow us on twitter</a> to stay up to date.
     </div><!-- #p2_sc -->
       <div id="tryagain">
-      <a href="http://portwist.dev"><img src="images/thanks_btn.png"></a>      </div><!--#tryagain -->
+      <a href="/"><img src="images/thanks_btn.png"></a>      </div><!--#tryagain -->
   </div><!--#content -->
