--- a/app/views/root/howto.html.erb
+++ b/app/views/root/howto.html.erb
@@ -1,21 +1,21 @@
 <body id="<%= body_id %>">
-  <div id="wrapper">  
+  <div id="wrapper">
     <div id="left_side">
       <ul>
-        <li>HOW TO PRONOUNCE IT: 
-        <li>HOW TO MAKE A PORTWIST: 
+        <li>HOW TO PRONOUNCE IT:
+        <li>HOW TO MAKE A PORTWIST:
         <br><br><br><br>
         <li>HOW TO READ THE TERMS AND CONDITIONS:
       </ul>
     </div><!--#left_side -->
   <div id="right_side">
     <ul>
-      <li>Imagine a young Mike Tyson saying portraits.</li>  
+      <li>Imagine a young Mike Tyson saying portraits.</li>
       <li>Get an Iphone 4.
         <br>
         Go somewhere cool.
         <br>
-        Take a pic of yourself with the front facing camera. 
+        Take a pic of yourself with the front facing camera.
         <br>
         Flip the camera and take a pic of your surroundings.</li>
       <li><a id="submit_text" <a href="popups.html">Click Here</a></li>
@@ -33,7 +33,7 @@
       </br>
       I’m not an asshole.  I won’t do anything weird with your pictures.
       </br>
-      But I think I’m obligated to tell you 
+      But I think I’m obligated to tell you
       </br>
       this stuff might show up somewhere else (but probably not).
       </br>
@@ -42,6 +42,6 @@
       If you want to yell at us about it <a id='submit_text' href="www.portwist.com/contact">click here.</a>
     </div><!-- #p2_tandc -->
     	<div id="tryagain">
-    	  <a href="http://portwist.dev"><img src="images/bye_btn.png"></a>
+    	  <a href="/"><img src="images/bye_btn.png"></a>
       </div><!--#tryagain -->
 </div><!--#wrapper_tandc -->
