resized and spaced home page images in frame. fixed spacing on success and failurte messages. renamed home page image class home.

--- a/app/views/photo_sets/_photo_set.html.erb
+++ b/app/views/photo_sets/_photo_set.html.erb
@@ -1,6 +1,6 @@
   <div id="photos">
-    <%= image_tag photo_set.photo_1.url(:s), :class => "user_left" %>
-    <%= image_tag photo_set.photo_2.url(:s), :class => "user_right" %>
+    <%= image_tag photo_set.photo_1.url(:home), :class => "user_left" %>
+    <%= image_tag photo_set.photo_2.url(:home), :class => "user_right" %>
       <div id="description">
         <ul>
           <li id="description_l"><%= photo_set.your_title %></li>
