--- a/app/views/photo_sets/index.html.erb
+++ b/app/views/photo_sets/index.html.erb
@@ -1,7 +1,7 @@
 <% @photo_sets.each do |photo_set| %>
   <p><%= photo_set.id %></p>
-  <p><%= image_tag photo_set.photo_1.url(:s) %></p>
-  <p><%= image_tag photo_set.photo_2.url(:s) %></p>
+  <p><%= image_tag photo_set.photo_1.url(:m) %></p>
+  <p><%= image_tag photo_set.photo_2.url(:m) %></p>
   <p><%= photo_set.your_title %></p>
   <p><%= photo_set.your_name %></p>
   <p><%= photo_set.status %></p>
