made submit page much better. browse button still needs work but is functional as behind the scenes. styled all elements so they work on submit page. small changes in next round.

--- a/app/views/root/howto.html.erb
+++ b/app/views/root/howto.html.erb
@@ -11,7 +11,7 @@
   <div id="right_side">
     <ul>
       <li>Imagine a young Mike Tyson saying portraits.</li>
-      <li>Get an Iphone 4.
+      <li>Get an Iphone 4 or 4S.
         <br>
         Go somewhere cool.
         <br>
