--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,9 +5,9 @@
 #logo {text-align: center; margin: 90px auto 0px auto; width:700px; padding: 0px 30px;}
 #line {height:1px; width:600px; color:#b4b5b7; background:#b4b5b7; border:none; margin:50px auto 0px auto;}
 #twitter {position: absolute; top: 14px; right: 38px;}
-#tabs #tab-home {position: absolute; top: 52px;left: 0px; z-index:3;}
-#tabs #tab-submit {position: absolute; top: 52px;left: 128px; z-index:2;}
-#tabs #tab-how-to {position: absolute; top: 52px; left: 256px; z-index:1;}
+#tabs #tab-home {position: absolute; top: 52px;left: -2px; z-index:3;}
+#tabs #tab-submit {position: absolute; top: 52px;left: 127px; z-index:2;}
+#tabs #tab-how-to {position: absolute; top: 52px; left: 255px; z-index:1;}
 #tabs #tab-current{}
 .clear {clear:both;}
 
@@ -37,21 +37,22 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 /*This is the code for submit*/
 #wrapper_st {width:700px; margin:15px auto 0px auto; padding:0px 30px;} 
 #frame {height:162px; width:366px; background-image:url("../images/camera_background.png"); background-repeat:no-repeat; float: right;}
-#picture_title_l {float: left; margin: 15px 0px 0px 0px; padding: 65px 26px 22px 29px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
-#picture_title_r {float:right; margin: 15px 0px 0px 0px; padding: 65px 30px 22px 25px; font:12px century gothic,sans-serif; color:#b4b5b7; text-align:center;}
-#browse_l {text-align:center;}
-#browse_r {text-align:center;}
+#picture_title_l {width:160px; height: 70px; float: left; margin: 28px 0px 10px 12px; padding: 50px 0px 0px 0px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
+#picture_title_r {width: 160px; height: 70px; float:right; margin: 28px 13px 10px 0px; padding: 50px 0px 0px 0px; font:12px century gothic,sans-serif; color:#b4b5b7;text-align:center;}
+#browse_l {margin: 20px 0px 0px 0px; background:url(../images/browse_button.png); background-repeat:no-repeat;background-position:center; }
+#browse_r {margin: 20px 0px 0px 0px; background:url(../images/browse_button.png); background-repeat:no-repeat;background-position:center; }
 #instructions {float:left; margin: 30px 0px 0px 25px;}
 #instructions li {display:block; color:#b4b5b7; font:12px century gothic,sans-serif;}
-#description_st_l {float:left; margin: 0px 0px 50px 15px; display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
-#description_st_r {float: right; margin: 0px 15px 50px 0px; display:inline; color:#b4b5b7; font:13px century gothic,sans-serif; text-align:right;}
-#submit {margin:225px 0px 0px 337px; padding: 10px 0px 30px 0px;color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: none; text-align:center;}
+#descriptions {margin:170px 15px 0px 345px;color:#b4b5b7; font:13px century gothic,sans-serif; padding: 0px 0px 40px 0px;}
+#description_st_l {float:left; margin:0px 0px 0px 0px; color:#b4b5b7; font:13px century gothic,sans-serif; text-align:left;}
+#description_st_r {float:right; margin:0px 0px 0px 0px; color:#b4b5b7; font:13px century gothic,sans-serif; text-align:right;}
+#submit {margin:20px 0px 0px 337px; padding: 10px 0px 30px 0px;color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: none; text-align:center}
 #submit_plain {color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: none; padding: 10px 0px 0px 0px;}
 #submit_link {color:#b4b5b7; font:10px century gothic,sans-serif; text-decoration: underline;}
 input[type="submit"] {background:url(../images/submit_button.png);}
-input[type="file"] {z-index:2; opacity:0; width:0px; height:15px; margin:25px 0px 0px 0px; }
-input[type="text"] {z-index: 2; width:121px; height:10px; margin:10px 0px 0px 0px; border-width:1px; border-color:#b4b5b7; border-style:solid;}
-input[type="checkbox"] {-webkit-appearance:none;-o-appearance:none;}
+input[type="file"] {z-index:2; opacity:0; width:120px; height:20px; margin:0px 0px 0px 0px;}
+input[type="text"] {width:121px; height:12px; border-width:1px; border-color:#b4b5b7; border-style:solid; margin:5px 0px 3px 0px;}
+
 
 
 /*This is the code for tandc  The top and bottom margin will change once it becomes a pop up*/
